<resources>
    <string name="app_name">Multi User Login System</string>
    <string name="student">Student</string>
    <string name="teacher">Teacher</string>
    <string name="person">Person</string>
    <string name="enterName">Enter your Name</string>
    <string name="enterMail">Enter your email</string>
    <string name="enterPassword">Enter your password</string>
    <string name="enterRegno">Enter your Register Number</string>
    <string name="enterStaffCode">Enter your Staff Code</string>
    <string name="enterNumber">Enter your phone number</string>
    <string name="gotoLogin">Login</string>
    <string name="backRegister">Back to register page</string>
    <string name="submit">Submit</string>
    <string name="verificationCode">Enter the verification code sent to your mail</string>
    <string name="verify">Verify</string>
    <string name="entercode">Enter the 6 digit verification code</string>
    <string name="forgotPassword">Forgot Password</string>
    <string name="studentRegistration">Student Registration</string>
    <string name="teacherRegistration">Teacher Registration</string>
    <string name="personRegistration">Person Registration</string>
    <string name="next">Next</string>
    <string name="emailNotRegistered">The Email you entered has not been registered</string>
    <string name="enterNewPassword">Enter Your new password</string>
    <string name="reenterNewPassword">Re-Enter your new password</string>
    <string name="change">Change</string>
    <string name="passwordCharacters">Password should contain at least 6 characters</string>
    <string name="passwordMisMatch">Passwords do not match</string>
    <string name="passwordUpdated">Password updated successfully</string>
    <string name="unableToUpdatePassword">Was not able to update the password, please try again</string>
    <string name="allValues">No field should be left empty</string>
    <string name="emailRegistered">The email you entered has already been registered</string>
    <string name="rollnoRegistered">Roll Number is already registered</string>
    <string name="staffCodeRegistered">Staff Code is already registered</string>
    <string name="phoneNumberRegistered">Phone Number is already registered</string>
    <string name="codeWrong">Verification code is wrong</string>
    <string name="registrationFailed">Registration Failed Please try again</string>
    <string name="studentWelcome">Welcome to Students Page</string>
    <string name="teacherWelcome">Welcome to Teachers Page</string>
    <string name="personWelcome">Welcome to Persons Page</string>
    <string name="passwordWrong">The password you entered is wrong</string>
    <string name="name">Name : </string>
    <string name="email">Email : </string>
    <string name="rollno">Roll no : </string>
    <string name="phoneNo">Phone no : </string>
    <string name="staffCode">Staff Code : </string>
    <string name="fieldNotEmpty">Field should not be left empty</string>
</resources>